Correct overflow problem with iframe

--- a/Site/stylesheet/basic.css
+++ b/Site/stylesheet/basic.css
@@ -1,3 +1,5 @@
+html, body {margin: 0; height: 100%; overflow: hidden}
+
 body {
     font-family: 'Vollkorn', serif;
     color: #333333;
@@ -7,6 +9,7 @@ body {
 }
 
 h1 {
+
     font-size: 3em;
     text-align: center;
     font-weight: normal;
@@ -39,6 +42,7 @@ a {
 .navBar {
     text-align: left;
     list-style-type: none;
+    max-height: 10%;
 }
 
 .navBar .navElements {
@@ -85,4 +89,9 @@ a {
 
 blockquote p {
     text-align: center;
+}
+
+.markdown_incrustation {
+    width: 100%;
+    height: 100%;
 }
